--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "npm": "6.13.4",
+    "node": "12.14.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
